SET(CMAKE_CXX_FLAGS "-ggdb")

PROJECT(AstroBot)

ADD_EXECUTABLE(
    AstroBot
    src/Behaviour.cpp
    src/Behaviour.h
    src/BinarySearchTree.cpp
    src/BinarySearchTree.h
    src/Cell.cpp
    src/Cell.h
    src/DestinationEvent.cpp
    src/DestinationEvent.h
    src/DestinationEventListener.cpp
    src/DestinationEventListener.h
    src/DestinationReachedBehaviour.cpp
    src/DestinationReachedBehaviour.h
    src/Event.cpp
    src/Event.h
    src/EventListener.cpp
    src/EventListener.h
    src/EventProducer.cpp
    src/EventProducer.h
    src/GUI.cpp
    src/GUI.h
    src/Main.cpp
    src/Map.cpp
    src/Map.h
    src/MoveBehaviour.cpp
    src/MoveBehaviour.h
    src/Obstacle.cpp
    src/Obstacle.h
    src/ObstacleEvent.cpp
    src/ObstacleEvent.h
    src/ObstacleEventListener.cpp
    src/ObstacleEventListener.h
    src/ObstacleFactory.cpp
    src/ObstacleFactory.h
    src/Orientation.h
    src/Robot.cpp
    src/Robot.h
    src/Simulation.cpp
    src/Simulation.h
    src/TObstacleFactory.cpp
    src/TObstacleFactory.h
    src/ThickWall.cpp
    src/ThickWall.h
    src/ThinWall.cpp
    src/ThinWall.h
    src/Trench.cpp
    src/Trench.h
    src/TurnBehaviour.cpp
    src/TurnBehaviour.h
    src/TemplateInstantiations.cpp
)
